zeit.archive changes
====================

0.2.1 (unreleased)
================

- Rekursive Indizierung alter Ausgaben neu geschrieben.


0.2 (2009-08-21)
================

- Jahresindex für Print-Archivseiten hinzugefügt.

- Layout für Printarchivseiten in Volume und Year unterteilt.

0.1 (2009-07-29)
================

- first release.